# PILF

./: main.py  pyproject.toml  readme.md  readme_zh.md  refactor_plan.md  run_experiment.py  run_marathon_rehearsal.py  run_mnist_rehearsal.py  run_rehearsal_experiment.py  train.py  zoo.md  zoo_zh.md
.clinerules/: PILF-2-Blueprint.md  PILF.md  PILR-S.md  REFACTOR_PLAN.md  background.md  component-reference.md  main.md  plotting.md  process.md  variables.md
.roo/: rules-code
analysis/: oid_benchmark.py
configs/: large_dense_standard.py  large_gauss_moe_smk_pilr_d.py  large_gauss_moe_smk_pilr_s.py  large_gen_gauss_moe_smk_pilr_d.py  large_gpil_exp_mnist.py  large_gpil_mnist.py  large_linear_moe_selective.py  large_memory_gauss_moe_smk_pilr_d.py  large_moe_mnist.py  large_pilr_mnist.py  large_pisa_mnist.py  large_pisa_mnist_2.py  large_sel_mnist.py  micro_moe_mnist.py  min_s_gpil.py  min_s_moe.py  null_gpil_mnist.py  null_moe_mnist.py  tiny_gpil_mnist.py  tiny_moe_mnist.py  tiny_pilr_mnist.py  unified_config.py
configs/CIFAR_Legacy/: gbp_lr_mnist.py  gbp_moe_vit.py
configs/legacy/: gbp_moe_vit_1_2_sigma.py
docs/: refactor_plan.md  zoo.md  zoo_zh.md
models/: __init__.py  base_vit.py  g2_moe.py  gating_transformer.py  gaussian_moe.py  gpil_moe.py  memory_gaussian_moe.py  moe_layers.py  moe_vit.py  vit.py
output/Grokking_PI/checkpoints/: 20250628T191048-single_train_mnist-micro_moe_mnist-final.pth
output/ViT/checkpoints/: 20250628T044505_large-pilr-mnist-marathon-rehearsal-cycle_5.pth  tiny-gbp-mnist--single-final.pth  tiny-moe-mnist--single-final.pth
output/marathon-v2/checkpoints/: 20250628T095638-marathon_v2-large_pisa_mnist-final.pth
output/marathon-v3/checkpoints/: 20250628T105444-marathon_v3-large_moe_mnist-final.pth  20250628T122235-marathon_v3-large_pisa_mnist-final.pth  20250628T152659-marathon_v3-large_gpil_mnist-final.pth  20250628T212307-marathon_v3-min_s_gpil-final.pth
output/marathon_v3-memory_gaussian-smk-20250705-111013/logs/: events.out.tfevents.1751713813.DESKTOP.16984.0
runs/marathon_v3-large_vit-memory_gauss-smk-pilr_d-20250703-201308/: events.out.tfevents.1751573588.DESKTOP.16952.0  projector_config.pbtxt
runs/marathon_v3-large_vit-memory_gauss-smk-pilr_d-20250703-203033/: events.out.tfevents.1751574633.DESKTOP.6320.0  projector_config.pbtxt
schedules/: marathon_v1.py  marathon_v2.py  marathon_v3.py  marathon_v4.py  null_hypothesis_test.py  single_train_mnist.py
tests/: test_plotting.py
utils/: __init__.py  config.py  datasets.py  experience_buffer.py  gating_loss.py  logging.py  metrics.py  optimizers.py  pi_calculator.py  plotting.py  strategies.py  trainer.py  training.py  types.py
utils/logging/: __init__.py  metrics_logger.py  plotting.py  types.py
utils/strategies/: __init__.py  backpropagation_strategies.py  base_strategy.py  learning_rate_strategies.py
utils/train_loops/: __init__.py  base_train_loop.py  gaussian_train_loop.py  mgm_train_loop.py  pilf_train_loop.py
(+55 files in other folders)
