[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pilf"
version = "0.1.0"
authors = [
  { name="dmf-archive", email="Lin.Rui.ipwt@proton.me" },
]
description = "A cognitive learning framework designed to transform fixed hyperparameters into dynamic policies driven in real-time by the intrinsic surprise of data."
readme = "readme.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "matplotlib",
    "packaging>=25.0",
    "sigma-pi>=0.2.3",
]

[project.urls]
"Homepage" = "https://github.com/dmf-archive/PILF"
"Bug Tracker" = "https://github.com/dmf-archive/PILF/issues"

[project.optional-dependencies]
dev = [
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["run_experiment.py"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
