[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pilf"
version = "0.1.0"
authors = [{ name = "dmf-archive", email = "Lin.Rui.ipwt@proton.me" }]
description = "A cognitive learning framework designed to transform fixed hyperparameters into dynamic policies driven in real-time by the intrinsic surprise of data."
readme = "readme.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "matplotlib",
  "packaging>=25.0",
  "pytest>=8.4.1",
  "ruff>=0.12.1",
  "scipy>=1.10.1",
  "sigma-pi>=0.2.3",
  "tensorboard>=2.14.0",
  "tqdm>=4.67.1",
]

[project.urls]
"Homepage" = "https://github.com/dmf-archive/PILF"
"Bug Tracker" = "https://github.com/dmf-archive/PILF/issues"

[tool.hatch.build.targets.wheel]
packages = ["run_experiment.py"]

[dependency-groups]
dev = [
  "mypy>=1.14.1",
  "torch==2.5.1+cu121",
  "torchvision",
  "torchaudio",
  "omegaid[cuda-12x]>=0.1.3",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff.lint]
select = ["I", "F", "B", "NPY"]
